--- a/index.html
+++ b/index.html
@@ -506,27 +506,27 @@
             
             <div class="gallery-grid">
                 <div class="gallery-item">
-                    <img src="3.jpg" alt="نقطة البيع" loading="lazy">
+                    <img src="3.PNG" alt="نقطة البيع" loading="lazy">
                     <div class="gallery-caption">واجهة البيع الرئيسية</div>
                 </div>
                 <div class="gallery-item">
-                    <img src="1.png" alt="تسجيل الدخول" loading="lazy">
+                    <img src="1.PNG" alt="تسجيل الدخول" loading="lazy">
                     <div class="gallery-caption">شاشة الدخول الآمنة</div>
                 </div>
                 <div class="gallery-item">
-                    <img src="2.png" alt="إدارة التوصيل" loading="lazy">
+                    <img src="2.PNG" alt="إدارة التوصيل" loading="lazy">
                     <div class="gallery-caption">إدارة طلبات التوصيل</div>
                 </div>
                 <div class="gallery-item">
-                    <img src="6.png" alt="الكيبورد" loading="lazy">
+                    <img src="6.PNG" alt="الكيبورد" loading="lazy">
                     <div class="gallery-caption">لوحة مفاتيح مدمجة</div>
                 </div>
                 <div class="gallery-item">
-                    <img src="4.png" alt="التقارير" loading="lazy">
+                    <img src="4.PNG" alt="التقارير" loading="lazy">
                     <div class="gallery-caption">تقارير الإغلاق</div>
                 </div>
                 <div class="gallery-item">
-                    <img src="5.jpg" alt="إدارة المواد" loading="lazy">
+                    <img src="5.PNG" alt="إدارة المواد" loading="lazy">
                     <div class="gallery-caption">إدارة الوجبات والأسعار</div>
                 </div>
             </div>
@@ -587,4 +587,5 @@
     </script>
 
 </body>
+
 </html>
